syntax = "proto3";

package message;

option go_package = "github.com/popeskul/awesome-messanger/services/notification/proto";

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
}

message SendNotificationRequest {
  string recipient_id = 1;
  string message = 2;
}

message SendNotificationResponse {
  bool success = 1;
}
